add logica para identificar el id

--- a/src/app/characters/info/info.component.html
+++ b/src/app/characters/info/info.component.html
@@ -5,6 +5,7 @@
             <th class="px-4 py-2 border border-gray-300">Ki</th>
             <th class="px-4 py-2 border border-gray-300">Raza</th>
             <th class="px-4 py-2 border border-gray-300">Foto</th>
+            <th>Trasformation</th>
         </tr>
     </thead>
     <tbody>
@@ -15,6 +16,14 @@
             <td class="px-4 py-2 border border-gray-300 text-center">
                 <img [src]="character.image" alt="{{character.name}}" class="w-22 h-40 rounded-full mx-auto">
             </td>
+            <td class="text-center">
+                <button 
+                    (click)="mostrar(character.id)" 
+                    class="bg-slate-600 text-white px-4 py-2 rounded-md hover:bg-slate-700 mx-auto">
+                    Click here
+                </button>
+            </td>
+            
         </tr>
     </tbody>
 </table>
